--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,11 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.portfolio.holdings:
+        BTC: 1
+        ETH: 10
+        SOL: 50
+        USDT: 5000
 
 services:
     # default configuration for services in *this* file
@@ -18,6 +23,10 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+
+    App\Service\PortfolioValuationService:
+        arguments:
+            $portfolioHoldings: '%app.portfolio.holdings%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
